fix: color scheme and horizontal scrolling

--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -489,4 +489,9 @@
 
 body {
   background: #fff;
+  width: 100%;
+}
+
+html, body {
+  overflow-x: hidden;
 }
